# LLMs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
LLMs_Udemy/: 1_LLM_intro.ipynb  1_Personal_Notes.ipynb  README.md
LLMs_Udemy/1_LLM_intro/: 1_LLM_intro.ipynb
LLMs_Udemy/5_Memory_Modules_and_ChatGPT_Clone/: Memory+Module.ipynb
LLMs_Udemy/personal_notes/: 1_Personal_Notes.ipynb
llm_udemy/12_Resume_Screening_ Assistance_Project/: utils.py
llm_udemy/14_Customer_Care_Call_Summary_Alert/: utils.py
llm_udemy/7_Chains/: Generic+Chains+Overview.ipynb
llm_udemy/personal_notes/: 1_Personal_Notes.ipynb
llm_zoomcamp/: pyproject.toml
llm_zoomcamp/week1/: homework1.ipynb  rag_helper_edited_q3.py
llm_zoomcamp/week2/: homework2.ipynb
stable_diffusion/: automatic1111 set-up.txt
